--- a/FBKVOControllerLab/Base.lproj/FBKMainMenu.xib
+++ b/FBKVOControllerLab/Base.lproj/FBKMainMenu.xib
@@ -14,6 +14,8 @@
         <customObject id="Voe-Tx-rLC" customClass="FBKAppDelegate">
             <connections>
                 <outlet property="anotherLabel" destination="G01-iR-OrH" id="cxc-G0-TAi"/>
+                <outlet property="colorWell" destination="bi9-RB-9yT" id="Usm-7B-BXO"/>
+                <outlet property="generateRandomColor" destination="jkA-Dz-vDp" id="tUf-Bl-lfQ"/>
                 <outlet property="slider" destination="fMT-iB-UpV" id="uus-73-0De"/>
                 <outlet property="sliderLabel" destination="49V-Vs-L9c" id="CQG-3Q-zdv"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
@@ -672,38 +674,54 @@
         <window title="Lab" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="425" width="179" height="120"/>
+            <rect key="contentRect" x="335" y="425" width="197" height="197"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="800"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="179" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="197" height="197"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="49V-Vs-L9c">
-                        <rect key="frame" x="19" y="59" width="141" height="17"/>
+                        <rect key="frame" x="30" y="85" width="137" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label #1" id="ZXZ-wB-YXU">
-                            <font key="font" metaFont="system"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" borderStyle="border" alignment="center" title="Label #1" drawsBackground="YES" id="ZXZ-wB-YXU">
+                            <font key="font" size="13" name="PTMono-Regular"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G01-iR-OrH">
-                        <rect key="frame" x="20" y="20" width="141" height="17"/>
+                        <rect key="frame" x="29" y="54" width="141" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label #2" id="Nfp-NV-1G9">
-                            <font key="font" metaFont="system"/>
+                            <font key="font" size="13" name="PTMono-Regular"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
                     <slider horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fMT-iB-UpV">
-                        <rect key="frame" x="75" y="81" width="28" height="30"/>
+                        <rect key="frame" x="85" y="150" width="28" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="above" sliderType="circular" id="St0-sp-GEe"/>
+                        <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="left" sliderType="circular" id="St0-sp-GEe"/>
                         <connections>
                             <action selector="sliderValueChanged:" target="Voe-Tx-rLC" id="Rwb-gx-dYY"/>
                         </connections>
                     </slider>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jkA-Dz-vDp">
+                        <rect key="frame" x="20" y="118" width="157" height="23"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="smallSquare" title="Generate Random Color" bezelStyle="smallSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kCd-Nf-1dI">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="generateRandomColor:" target="Voe-Tx-rLC" id="Vo8-YZ-YC2"/>
+                        </connections>
+                    </button>
+                    <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bi9-RB-9yT">
+                        <rect key="frame" x="73" y="20" width="51" height="23"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </colorWell>
                 </subviews>
             </view>
         </window>
